infra/garage.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-gateway-to-garage
  namespace: database
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: manager
  to:
    - group: ""
      kind: Service
      name: garage
