infra/cilium.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-gateway-to-hubble-ui
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: manager
  to:
    - group: ""
      kind: Service
      name: hubble-ui
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: manager
spec:
  parentRefs:
    - name: default
  hostnames:
    - hubble.internal.chlorodose.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          namespace: kube-system
          kind: Service
          port: 80
