infra/cnpg.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres
  namespace: manager
spec:
  parentRefs:
    - name: default
      sectionName: postgres
  rules:
    - name: route
      backendRefs:
        - name: postgres-rw
          namespace: database
          kind: Service
          port: 5432
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-gateway-to-postgres
  namespace: database
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: manager
  to:
    - group: ""
      kind: Service
      name: postgres-rw
