infra/seaweedfs.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: from-gateway-to-seaweed
  namespace: database
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: manager
  to:
    - group: ""
      kind: Service
      name: seaweed-s3
    - group: ""
      kind: Service
      name: seaweed-admin
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweed-s3-expose
  namespace: manager
spec:
  parentRefs:
    - name: default
  hostnames:
    - s3.chlorodose.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seaweed-s3
          namespace: database
          kind: Service
          port: 8333
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweed-admin-expose
  namespace: manager
spec:
  parentRefs:
    - name: default
  hostnames:
    - seaweed.chlorodose.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seaweed-admin
          namespace: database
          kind: Service
          port: 23646
