infra/cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-isolation
  namespace: external
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: default
              gateway.envoyproxy.io/owning-gateway-namespace: manager
      ports:
        - protocol: TCP
          port: 10080
        - protocol: TCP
          port: 10443
        - protocol: UDP
          port: 10443
    - to: # Cloudflare
        - ipBlock: # Tunnal v4
            cidr: 198.41.0.0/16
        - ipBlock: # Cloudflare API
            cidr: 104.16.0.0/12
        - ipBlock: # Cloudflare v6
            cidr: 2606:4700::/32
    - to: # Cluster DNS
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
